--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meu Site</title>
+    <title>Meu Site Complexo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            color: white;
+            padding: 0.5rem;
+            text-align: center;
+        }
+        section {
+            padding: 2rem;
+            margin: 1rem;
+            background-color: white;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #555;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Olá, mundo!</h1>
-    <p>Bem-vindo ao meu site.</p>
+    <header>
+        <h1>Bem-vindo ao Meu Site Complexo</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a> |
+        <a href="#">Sobre</a> |
+        <a href="#">Portfólio</a> |
+        <a href="#">Contato</a>
+    </nav>
+    <section>
+        <h2>Sobre Mim</h2>
+        <p>Olá! Eu sou um entusiasta da web e estou animado para compartilhar meu conhecimento com você.</p>
+    </section>
+    <section>
+        <h2>Meu Portfólio</h2>
+        <ul>
+            <li><a href="#">Projeto 1</a></li>
+            <li><a href="#">Projeto 2</a></li>
+            <li><a href="#">Projeto 3</a></li>
+        </ul>
+    </section>
+    <section>
+        <h2>Contato</h2>
+        <p>Você pode me contatar em <a href="mailto:contato@meusite.com">contato@meusite.com</a>.</p>
+    </section>
+    <footer>
+        <p>&copy; 2023 Meu Site Complexo</p>
+    </footer>
 </body>
 </html>
